[tool.poetry]
name = "arcade-test"
version = "0.1.0"
description = ""
authors = ["hundredvisionsguy <winikkc@hsd.k12.or.us>"]

[tool.poetry.dependencies]
python = "^3.9"
arcade = "^2.6.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
